--- a/index.html
+++ b/index.html
@@ -19,6 +19,33 @@
     <script type="module" src="js/main.js"></script>
 </head>
 <body>
+    <header class="grid-con" id="main-header">
+        <nav id="main-nav">
+            <h2 class="hidden">Header Navigation</h2> 
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#skills">Skills</a></li>                
+            </ul>
+        </nav>
+        <div id="main-logo">
+            <a href="index.html"><img src="images/logo.svg" alt="Logo"></a>
+        </div>
+
+        <div id="burger-nav">
+            <h2 class="hidden">Main Navigation</h2>
+            <input type="checkbox" id="hamburger">
+            <label for="hamburger">
+                <img src="images/burger.svg" alt="hamburger menu icon">
+            </label>
+            <div id="burger-con">
+                <ul>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#skills">Skills</a></li> 
+                </ul>
+            </div>
+        </div>
+    </header>
+
     
 </body>
 </html>
