--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         </div>
     </header>
 
-    
+    <main>
+        <section class="grid-con" id="hero"></section>
+    </main>
+
 </body>
 </html>
