--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
 
     <main>
         <section class="grid-con" id="hero"></section>
+
+        <section class="grid-con about-home">
+            <h2 id="about-title">About me</h2>
+                <a href="about.html" id="about-button">Get to know me</a>
+        </section> 
+
+
     </main>
 
 </body>
