adding content and sass
adding content and sass

--- a/index.html
+++ b/index.html
@@ -54,6 +54,25 @@
                 <a href="about.html" id="about-button">Get to know me</a>
         </section> 
 
+        <section id="skills" class="grid-con">
+            <h2 id="skills_title">Skills</h2>
+
+                <h3 class="id-skills1">MULTIMEDIA AND 3D DESIGN</h3>
+                    <div class="skills1">
+                        <a href="multimedia.html"><button class="skills-button">More</button></a>   
+                    </div>
+                
+                <h3 class="id-skills2">CONTENT CREATION</h3>
+                    <div class="skills2"> 
+                        <a href="content.html"><button class="skills-button">More</button></a>
+                    </div>
+
+                <h3 class="id-skills3">PHOTOGRAPHY</h3>
+                    <div class="skills3">
+                        <a href="photography.html"><button class="skills-button">More</button></a>
+                    </div>
+
+        </section>
 
     </main>
 
