adding content and sass
adding content and sass

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
 
         </section>
 
+        <section class="grid-con " id="contact">
+            <h2 id="c-title">Let’s work together</h2>
+                <a href=mailto:"camilaromero.9603@gmail.com" target="_blank"><button class="contact-button">Say hello</button></a>
+        </section>
+
     </main>
 
 </body>
