--- a/index.html
+++ b/index.html
@@ -81,5 +81,30 @@
 
     </main>
 
+    <footer class="grid-con">
+        <div id="logo-footer">
+            <a href="index.html"><img src="images/logo.svg" alt="logo"></a>
+        </div>
+
+        <nav id="main-nav-footer">
+            <h2 class="hidden">Header Navigation</h2> 
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Skills</a></li>
+            </ul>
+        </nav>
+
+        <div id="social-media">
+            <a href="https://www.linkedin.com/in/maria-camila-romero-0103-/">LinkedIn</a><br>
+            <a href="https://www.instagram.com/apieceofme_03?igsh=eDJtdzAwMHJqdThi">Instagram</a><br>
+            <a href=mailto:"camilaromero.9603@gmail.com" >camilaromero.9603@gmail.com</a>
+        </div>
+
+        <div id="footer-text">
+            <h3>All work &copy 2024  Camila Romero.
+                Thanks for taking a look!</h3>  
+        </div>
+    </footer>
+
 </body>
 </html>
