--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="css/grid.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js"></script>
     <script type="module" src="js/main.js"></script>
 </head>
 <body>
@@ -47,7 +48,9 @@
     </header>
 
     <main>
-        <section class="grid-con" id="hero"></section>
+        <section class="grid-con" id="hero">
+            <spline-viewer loading-anim-type="spinner-small-dark" url="https://prod.spline.design/kBeQj2UyOm85qC4o/scene.splinecode"></spline-viewer>
+        </section>
 
         <section class="grid-con about-home">
             <h2 id="about-title">About me</h2>
